# EasyRAG

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  test_rag.py
docs/: 00-overview.md  01-rag-basics.md  02-data-loading-overview.md  02-system-architecture.md  03-indexing-overview.md  04-retrieval-overview.md  05-generation-overview.md  06-evaluation-overview.md  07-optimization-overview.md  08-system-architecture-overview.md  README.md
docs/engineering/: 20-code-map.md  21-indexing-pipeline.md  22-retrieval-pipeline.md  23-generation-pipeline.md  23-graph-curation-pipeline.md  24-graph-curation-pipeline.md  24-local-vs-production-backends.md  25-extension-guide.md  25-local-vs-production-backends.md  26-extension-guide.md  26-generation-pipeline.md
docs/principles/: 10-query-preprocessing.md  11-chunking-strategies.md  12-vector-index-principles.md  13-hybrid-retrieval-and-fusion.md  14-reranking-and-selection.md  15-knowledge-graph-for-rag.md  16-storage-backends-and-tradeoffs.md  17-evaluation-and-debugging.md  17-top-k-and-candidate-selection.md  18-generation-foundations.md  (+8 more)
easyrag/: __init__.py  tools.py
examples/: README.md  build_index_demo.py  query_demo.py  quickstart.py
notebooks/: README.md  __init__.py  _utils.py
sample_data/: README.md
scripts/: build_index.py  eval_scifact.py  import_scifact_sample.py
tests/: test_config.py  test_eval_scifact_script.py  test_rag_backends.py  test_rag_generation_eval.py  test_rag_graph_ops.py  test_rag_providers.py  test_rag_retriever.py  test_rag_storage_compat.py  test_test_rag_script.py
(+129 files in other folders)
